objects/npsp__Allocation__c.object
<CustomObject>
    <fields>
        <fullName>npsp__Amount__c</fullName>
        <description>The amount of the Opportunity allocated to this General Accounting Unit. Leave blank for percent-based Allocations.</description>
        <inlineHelpText>Amount of the opportunity to allocate to this general accounting unit. Leave blank for percent based allocations.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Campaign associated with this Allocation. Use this field if you want new Opportunities associated with this Campaign to be allocated in the same way.</description>
        <inlineHelpText>Optionally attributes allocations to a campaign. All new opportunities created with this campaign as primary campaign source will automatically be allocated in the same way.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>GAU Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__General_Accounting_Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The General Accounting Unit this Allocation is attributed to. Only General Accounting Units marked as active are available for new Allocations.</description>
        <inlineHelpText>The general accounting unit to attribute this allocation. Only general accounting units marked as active are available for new allocations.</inlineHelpText>
        <label>General Accounting Unit</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Choose an active General Accounting Unit for this Allocation. You cannot modify an Allocation assigned to an inactive General Accounting Unit.</errorMessage>
            <filterItems>
                <field>npsp__General_Accounting_Unit__c.npsp__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.npsp__Payment__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.npsp__Payment__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>You must select an active General Accounting Unit for this Allocation.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>GAU Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity you want this Allocation attributed to. NPSP rolls up all Opportunities in a Closed/Won stage to this Allocation&apos;s General Accounting Unit.</description>
        <inlineHelpText>Attributes allocations to an opportunity. All opportunities in a closed and won stage will be rolled up to this allocation&apos;s general accounting unit.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GAU Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attributes allocations to a Payment.</description>
        <inlineHelpText>Attributes allocations to a Payment.</inlineHelpText>
        <label>Payment</label>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Percent__c</fullName>
        <description>Percent of Opportunity amount allocated to this Allocation&apos;s General Accounting Unit. If you later modify the Opportunity amount, NPSP will update the allocation amount on the General Accounting Unit.</description>
        <inlineHelpText>Percent of opportunity amount to allocate to this general accounting unit. Modifying an opportunity amount of a percent based allocation will modify the allocation amount.</inlineHelpText>
        <label>Percent</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Recurring Donation this Allocation is attributed to. NPSP automatically allocates all new Opportunities associated with the Recurring Donation in the same way.</description>
        <inlineHelpText>Optionally attributes allocations to a recurring donation. All new opportunities created with this recurring donation schedule will automatically be allocated in the same way.</inlineHelpText>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>GAU Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GAU Allocation</label>
    <nameField>
        <displayFormat>ALL-{0}</displayFormat>
        <label>GAU Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAU Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>